--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -499,5 +499,29 @@
   "a48e6035-5e61-4fc7-9ac4-89016e7174fe": "Mijn account",
   "f02ad9a5-f0b4-483e-961c-491ddf7d6f6a": "Mijn account",
   "68c40b9e-30d7-4ce5-8069-f7ca93221906": "Adres van je vereniging",
-  "ffdbd596-e9c8-4c67-bfdf-41a5199de133": "De link naar de website van jouw vereniging."
+  "ffdbd596-e9c8-4c67-bfdf-41a5199de133": "De link naar de website van jouw vereniging.",
+  "5e2a299f-a166-46a8-9975-cf1b1ce334a6": "Kampmeldingen",
+  "9e53d8ca-d01f-4d64-8707-3877435f28fc": "Stel in welke extra gegevens eenheden nog moeten indienen en tegen wanneer.",
+  "59eba98e-b382-4075-af33-f8bf30b1042c": "Nieuwe deadline",
+  "592f224e-5190-433c-a301-3fd2a11db105": "Wijzig deadline",
+  "67494091-03bf-4700-a003-84f53dcea922": "Ben je zeker dat je deze deadline wilt verwijderen?",
+  "ba246326-994d-4133-9f85-5f693cdd2007": "Ja, verwijderen",
+  "68bd7b1d-9492-40ca-89f5-917143932218": "Beschrijving van dit type kampmelding. Deze tekst is zichtbaar voor de leiding.",
+  "51850490-5d94-4e0b-a415-9b84e07d86f2": "Soorten activiteiten",
+  "1a559b46-1863-4782-8cb5-ee6517a2e91d": "Vragenlijsten",
+  "4f83e88b-bf47-43fe-96ca-b24d136deaa8": "Nieuwe soort kampmelding",
+  "d76e80a1-b717-4002-b40c-1e890e87bf1c": "Wijzig instellingen",
+  "97887ee6-2da2-4120-8baa-609441d6091c": "Nieuw soort kampmelding",
+  "92c63ee2-f416-4690-99bc-dbda65399ce6": "Soorten kampmeldingen",
+  "a1609316-b6dd-47b8-88ec-0ad383bf0aac": "Hier kan je verschillende soorten kampmeldingen aanpassen en toevoegen.",
+  "54a24516-1a43-4bc7-ac7a-c3fafa74ee22": "Kies minstens één standaard leeftijdsgroep",
+  "bd1ba739-5402-42ec-abef-9d45ed31d556": "Alle activiteitstypes",
+  "074933d6-e0da-4542-8ec0-efb759645826": "Selecteer minstens één optie",
+  "d37f0355-379d-4128-aafa-fefb201188bc": "Annuleringskost",
+  "b263fa75-5a47-43a6-94a5-95eeac94567f": "Sommige inschrijvingen werden door een vereniging betaald. In dat geval zal de annuleringskost aangerekend worden aan de betalende vereniging (van organisator naar betalende vereniging) én het lid (van de betalende vereniging naar lid).",
+  "2011b902-ec2f-4c5a-a98a-6e50a1351fae": "Onvolledige persoonsgegevens",
+  "7289b10e-a284-40ea-bc57-8287c6566a82": "Groepsinschrijving",
+  "e81e0bdb-c15f-4b9a-abca-172a8d379993": "Verwijderde functies",
+  "02ef437e-2166-49be-b5ae-73e5452546a0": "geen rechten",
+  "d3a424d0-f851-48f2-8837-340e8b60374e": "Er zijn geen aansluitingen beschikbaar voor deze gebruiker."
 }
