--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -523,5 +523,6 @@
   "7289b10e-a284-40ea-bc57-8287c6566a82": "Groepsinschrijving",
   "e81e0bdb-c15f-4b9a-abca-172a8d379993": "Verwijderde functies",
   "02ef437e-2166-49be-b5ae-73e5452546a0": "geen rechten",
-  "d3a424d0-f851-48f2-8837-340e8b60374e": "Er zijn geen aansluitingen beschikbaar voor deze gebruiker."
+  "d3a424d0-f851-48f2-8837-340e8b60374e": "Er zijn geen aansluitingen beschikbaar voor deze gebruiker.",
+  "11ffdf3a-dd66-49ec-b092-c7f3063e19f3": "Stamhoofd verwijdert automatisch het reeds aangerekende bedrag van het openstaande bedrag van alle leden die je uitschrijft. Als je wilt kan je wel een annuleringskost in rekening brengen, bv. als je het bedrag niet zal terugbetalen stel je dit in op 100%. Als je geen annuleringskost in rekening brengt, zal het openstaande bedrag van een lid dat al betaald had negatief worden en kan je dit terugbetalen via het tabblad ‘Rekening’ van een lid."
 }
