Added translations for word group

--- a/shared/locales/src/en.json
+++ b/shared/locales/src/en.json
@@ -534,5 +534,88 @@
   "18cbfdea-798d-4efc-aad8-f6897c9efb2c": "Kies hoeveel dagen er minimaal tussen elke e-mail moet zitten, en hoeveel e-mails je maximaal wilt versturen ter herinnering voor een openstaand bedrag. E-mails die je zelf verstuurt tellen niet mee.",
   "6b39d554-a4a7-489c-84b5-3f430457dd50": "Contactpersonen voor schulden van andere verenigingen",
   "0998a455-9ffc-4222-8432-ef7681908ad7": "Als een andere vereniging schulden aan jouw vereniging heeft, kan je hiervoor ook automatische e-mails versturen. Dit gebeurt op basis van functies die je hieronder kan instellen.",
-  "15b6f0c8-6287-4b4d-bf34-4da2f4a0e575": "*Je kan een openstaand bedrag uitstellen - bv. voor gespreid betalen of een proefperiode. Het verschijnt pas als snelle actie in het ledenportaal vanaf één week voor deze datum (samen met een eventuele automatische e-mail) en moet betaald zijn tegen de ingevulde datum. Het is mogelijk om het al vroeger te betalen, maar zeker niet verplicht."
+  "15b6f0c8-6287-4b4d-bf34-4da2f4a0e575": "*Je kan een openstaand bedrag uitstellen - bv. voor gespreid betalen of een proefperiode. Het verschijnt pas als snelle actie in het ledenportaal vanaf één week voor deze datum (samen met een eventuele automatische e-mail) en moet betaald zijn tegen de ingevulde datum. Het is mogelijk om het al vroeger te betalen, maar zeker niet verplicht.",
+  "fb8c1c30-2108-4a1b-a412-0381263e860e": "Boekhouding en aansluitingen",
+  "77e1bb0a-166c-4d37-9dd6-c5ad10a9d91b": "Betalingen exporteren",
+  "35f1db1d-e8bd-4a0c-8141-97b8c716ec17": "Overschrijvingen controleren",
+  "143d3f17-d547-47ff-9b83-f8587bcbc16c": "Markeer overschrijvingen als betaald.",
+  "9ac518c6-00fc-47c1-bd01-2f1f6fa17613": "Alle betalingen",
+  "67433a1e-efe1-48a1-9b4c-84dea499c5b9": "Controleer alle betalingen die in het systeem aanwezig zijn, inclusief eventueel mislukte betaalpogingen.",
+  "231f28d7-292a-43bc-877b-751012b6ae48": "Te ontvangen bedragen",
+  "f1248bd5-36f4-40fd-9467-08bda59127d6": "Lijst van alle groepen die nog een openstaand bedrag hebben tegenover {name}",
+  "4a2a630f-3396-404f-9316-d660df9935a9": "Alle aansluitingen die (al dan niet automatisch) aan leden worden toegevoegd, worden pas toegevoegd aan het openstaande bedrag van een lokale groep na een manuele actie. Daarna kan een lokale groep het bedrag betalen via een online betaling in hun beheerdersportaal.",
+  "fb8224d8-e010-4632-9d50-91cb42a35215": "Aanrekenen",
+  "ffd221f8-0f55-4b66-99f4-d43916f55f90": "Alle aansluitingen worden aan het openstaand bedrag toegevoegd. Hierna kunnen deze aansluitingen niet meer van een lid worden verwijderd.",
+  "5e9e86f7-81f6-4ffe-9cda-95982de2b4cb": "Verantwoordelijke organisatie voor aanrekeningen",
+  "f1931dcf-219f-4ca2-935b-d5a6747ddbdb": "De aansluitingkosten worden altijd aangerekend via een organisatie/groep die de koepel vertegenwoordigt. De betaalinstellingen en facturatiegegevens van die groep worden gebruikt voor het verzamelen van alle betalingen. Op die manier kan je de beschikbare betaalmethodes en betaalaccounts configureren.",
+  "550e876b-f397-44a5-9e0a-fb5ce6df3a40": "Gebruik de boekhoudmodule van deze groep om een zicht te krijgen op alle betalingen.",
+  "6c9746ca-285b-444a-89d3-4052897e2dc2": "Wijzig",
+  "f4c0da5a-03a8-4be2-9ae1-ea049b5b46af": "Er is nog geen verantwoordelijke groep ingesteld. Kies een groep die verantwoordelijk is voor het verzamelen van de aansluitingskosten.",
+  "1310f065-caf5-41e6-a3b8-cf9b39336483": "Instellen",
+  "5d9d5777-5ecb-4223-8dc2-973ee3fee4bb": "Opslaan",
+  "cc3d3da6-27ce-4f32-a696-4e08d649a7bc": "Proefperiodes",
+  "ed995f5d-eeff-44ad-ac35-f518b2892524": "Detail",
+  "78f9f25f-e02d-4310-af9e-87b075aa1232": "Kies een vereniging die verantwoordelijk is voor het verzamelen van de aansluitingskosten",
+  "85dd1619-e565-4bd7-b711-58e864d423c7": "Wijziging opgeslagen",
+  "17cffcca-0926-49ae-98a1-123e3459cd20": "Weet je zeker dat je alle aansluitingen wilt aanrekenen?",
+  "03d73550-8d06-475c-815b-f893ae033b03": "Ja, aanrekenen",
+  "14f323d7-aec9-42c7-9cb0-3c2769770f02": "Aansluitingen worden aangerekend. Het kan even duren voor deze overal verschijnen.",
+  "aa80abe5-2f1a-448d-b98c-0c38ece581d6": "Je kan een leeftijdsgroep meerdere namen geven. Het is niet nodig om dus zelf een opsomming te voorzien, dat gebeurt automatisch.",
+  "4f96c821-c032-4772-8d6a-55cf0c8354d1": "Enkel zichtbaar voor leiding of beheerders",
+  "bb2ff811-dae0-4322-975f-793de13d471a": "Automatische aansluiting",
+  "6af3e1d3-802c-4cf3-923e-33faacfd2e16": "Leden die in deze leeftijdsgroep inschrijven, kan je automatisch laten aansluiten bij de koepel. Op die manier is de verzekering meteen in orde en hoeft de leiding dit niet per lid individueel te doen.",
+  "10df6cbf-4609-4677-8791-4ffa38e31699": "Geen automatische aansluiting",
+  "8c1f264f-3b0b-49b9-8a29-9ceb2dfd7754": "Leeftijd",
+  "4be45e47-0ee2-43cd-b719-8a60513f0965": "Dit is een standaardinstelling. Een lokale groep kan deze instellingen nog aanpassen. Deze instelling dient dus vooral als standaardinstelling en om te communiceren richting groepen.",
+  "ea927f14-835b-43f6-bf6e-3e689b5a0824": "*Hoe oud het lid wordt in het kalenderjaar van de start van een werkjaar (dus leeftijd op 31/12/{startYear}). Ter referentie: leden uit het eerste leerjaar zijn 6 jaar op 31 december. Leden uit het eerste secundair zijn 12 jaar op 31 december.",
+  "c6c8e406-3d1f-41c4-b3df-d0b1e8661040": "Vereisten",
+  "18a41eda-92fd-46a6-acc1-fc35536b86b4": "Beperk tot bepaalde lokale groepen (tags)",
+  "348c29be-b166-497b-be15-d9522a2dc2fb": "Groepen",
+  "5d1da89a-aa00-4953-aa59-53c0342c5c1a": "Kies voor welke lokale groepen deze standaard leeftijdsgroep beschikbaar is.",
+  "070cf05d-b582-4f6a-b153-48f5f3ecc9fe": "Gegevensverzameling",
+  "f9c9433c-24fd-4645-b5df-966f9d076b1b": "Deze gegevens worden verzameld en gekoppeld aan leden die inschrijven bij deze standaard leeftijdsgroep. Let erop dat deze gegevens gedeeld zijn met andere inschrijvingen. Als dezelfde gegevens dus voor meerdere inschrijvingen verzameld worden, dan worden ze maar één keer gevraagd (anders kunnen leden de gegevens wel nog nakijken als het al even geleden werd ingevuld) en kan je niet per inschrijving andere gegevens invullen. Gebruik ze dus niet voor tijdelijke vragen.",
+  "ea9baa7a-c2c8-4207-a300-9de4b145f6ca": "Gelieve een naam in te vullen",
+  "e5ca0b55-20c6-4523-89b6-1ecba10d95b7": "Ben je zeker dat je deze standaard leeftijdsgroep wilt verwijderen?",
+  "6e3da050-6679-4475-a858-77b5b02b6fa4": "Verwijderen",
+  "8997d560-a0c6-422b-a988-6186e8ed64be": "Je kan dit niet ongedaan maken. Er gaat mogelijks informatie verloren over alle gekoppelde inschrijvingsgroepen.",
+  "83db2c73-38a3-4d13-9984-2f19f95e1329": "Sluiten",
+  "5069c440-c7db-4abc-9f1e-148d47d3650f": "Er wordt geen e-mail verzonden",
+  "d79ef7e9-5399-4aae-804b-cb34fac5583d": "Het standaard sjabloon wordt gebruikt",
+  "926212f4-c606-46e7-a43e-2f1ca3bfbf33": "De standaard e-mail werd aangepast",
+  "8ecaf93e-e872-4556-9067-f89b3f81332e": "Een lokale groep kan deze template aanpassen. Deze template wordt gebruikt als er geen lokale template is.",
+  "665781fd-c032-4083-900d-fd0356334752": "Laatst gewijzigd op: {date}",
+  "6235923a-a1bc-433e-b2a3-639b37627f27": "Standaard sjabloon wordt gebruikt",
+  "68b462bf-9ed9-4509-9b1b-0f1800e0e9ad": "Geen emailtemplates gevonden",
+  "0f0113ca-2269-49c3-b5f2-423005f71afc": "Huidige e-mail opslaan",
+  "6ecc6d7f-35dd-4459-b8d0-ce5b780b8012": "Nieuw sjabloon naar leden",
+  "c88003a3-8582-4e59-a8d3-b3e77b4f01ed": "Nieuw sjabloon naar openstaande bedragen",
+  "27eb0afb-0411-4036-894c-4c214fdf946c": "Kies een e-mailsjabloon",
+  "922729ac-2079-48eb-aadf-fdee5bbfd21c": "Wijzig e-mailsjablonen",
+  "d8d27ace-5ed7-47cf-bf94-955ed8824bd3": "Opgeslagen",
+  "1c12b46c-804b-4ec9-a524-5c74d5cd8a1b": "Automatische",
+  "9b7756f6-8097-430d-bcee-7248a4bb1c3c": "Weet je zeker dat je dit sjabloon wilt verwijderen?",
+  "69a7751b-c316-42cd-a766-98e7e11fe3d6": "Persoonsgegevens van leden",
+  "0581e6ae-5695-4132-89d3-7f1c542d44f4": "Minimale gegevens voor alle leden in het systeem",
+  "34b986e3-111d-493c-ba71-7dbcf403a9ba": "Ingebouwde gegevens (alle leden behalve wachtlijst)",
+  "44bb1bad-d516-4694-939b-748bf534352b": "Deze minimale gegevens zijn essentieel voor een goede werking van het systeem en worden gevraagd voor elk lid - ook leden op de wachtlijst en leden die inschrijven bij niet-standaard leeftijdsgroepen.",
+  "b291402c-fd6a-4a9f-bfa6-78bca95ff48f": "Bepaal welke gegevens je voor alle leden wilt verzamelen (behalve leden die enkel inschrijven op een wachtlijst - dat kan via de instellingen van die wachtlijst aangepast worden). Je kan dit ook per leeftijdsgroep instellen, voor maximale flexibiliteit (via de instellingen van elke leeftijdsgroep).",
+  "0ad0ab12-37bf-425e-871c-b91161ee45f8": "Je moet minstens het e-mailadres van een lid of de gegevens van ouders verzamelen. Je kan niet beide uitschakelen.",
+  "4e842082-57fa-49ed-a806-6861cc913d12": "Ingebouwde persoonsgegevens uitbreiden",
+  "09eb3057-c765-4909-b821-e75877b44135": "Extra persoonsgegevens",
+  "a72d08ad-b23c-4079-b375-1dd569da140a": "Breid het aantal persoonsgegevens zelf nog uit. Vervolgens kan je per inschrijvingsgroep (of gewoon voor alle leden) de persoonsgegevens inschakelen.",
+  "07d18e1b-2935-4945-9595-50e16a929b19": "Voeg zelf nog persoonsgegevens toe die voor alle lokale groepen beschikbaar zijn. Je kan deze vervolgens verplichten voor alle leden die inschrijven bij gelijk welke standaard-leeftijdsgroep, of deze verplichten per standaard-leeftijdsgroep (via de instellingen van elke standaard-leeftijdsgroep). Indien niet ingeschakeld kunnen lokale groepen kunnen deze ook nog inschakelen volgens hun wensen.",
+  "a9c8e948-2bf2-4915-90a0-1513397d747c": "Voorbeeld",
+  "e9a2ed45-f158-4e88-9a3c-75ee502f0e7a": "Lid",
+  "1cb53933-ed06-45ae-9240-dd389298823c": "Ben je zeker dat je wilt sluiten zonder op te slaan?",
+  "9bd792a4-fb4a-4275-8308-e316285be890": "Niet opslaan",
+  "caa4e548-ffa0-4878-a046-c359479423ad": "Functie toevoegen",
+  "45f0eefc-1ede-4a64-a811-da151361aec8": "Ken automatisch rechten toe aan leden die een bepaalde ingebouwde functie hebben.",
+  "390f755c-b757-4a54-9bb4-d380e5869081": "Geen functies gevonden",
+  "e4f4c4a8-0185-4f84-b5a4-ae58d2b633e3": "Functies op nationaal niveau",
+  "dab378b1-f860-4377-bd0c-04eb2b57af74": "Deze functies zijn globaal en gelden enkel op koepelniveau. Enkel een hoofdbeheerder van de koepel kan deze toekennen aan een lid. Sommige functies geven ook toegang het het administratieportaal.",
+  "f4fef92e-cb28-408b-ada2-cf8b0da0fbfd": "Groepseigenfuncties",
+  "fcf09121-af79-4d3f-90e7-31dec01ebb98": "Standaardfuncties op lokaal niveau",
+  "aad47217-df26-43ce-a43c-896697d5fbd4": "Voeg eigen functies toe die enkel van toepassing zijn in je eigen groep.",
+  "e6da382b-6acc-4a77-ab74-ece7ea002d5f": "Deze functies worden gekoppeld aan een lid samen met een lokale groep, door een hoofdbeheerder van die groep. Een lokale groep kan zelf ook nog groepseigenfuncties toevoegen om deze uit te breiden.",
+  "53a2f29c-ee8c-42da-b49a-c0ce07544b99": "De wijzigingen zijn opgeslagen"
 }
