--- a/shared/locales/src/keeo/en.json
+++ b/shared/locales/src/keeo/en.json
@@ -14,13 +14,37 @@
     "b4307772-62dd-48a4-bae3-9d46df314727": "Welkom op Keeo. Zoek hieronder jouw eenheid om je in te schrijven of om jouw gegevens te beheren.",
     "369440db-a9e0-4530-a06b-3ea05cc6a2b0": "Welkom op het ledenplatform van FOS Open Scouting, hier kan je jouw gegevens beheren en je inschrijven bij een eenheid of voor een activiteit.",
     "f02ad9a5-f0b4-483e-961c-491ddf7d6f6a": "Ledenportaal",
-    "76b00f58-a587-431f-9c28-1b86d394fc26": "Stel in welke soorten lokalen eenheden kunnen toevoegen",
+
     "88119ffc-b692-4222-8217-75a9fa64f675": "Reken een bedrag aan aan de {count} geselecteerde eenheden.",
+    "6e884f27-427f-4f85-914c-d5c2780253b0": "Eenheden",
+    "d5d2e25f-588e-496e-925f-f7e375c3888a": "Mijn eenheid",
+    "2669729c-718d-49a1-9e4f-b3a65a6479a8": "Zoek een eenheid waar je {firstName} wilt inschrijven",
+    "4697c731-26fd-4ba5-8aeb-0f5b8385a54b": "Zoek een eenheid",
+    "76b00f58-a587-431f-9c28-1b86d394fc26": "Stel in welke soorten lokalen eenheden kunnen toevoegen",
+    "f3fc4e4d-76ee-4ca0-b712-9d2c7e5395fc": "Het maximum geldt per eenheid",
+    "51c27c5e-c2be-441b-a571-7bf573ee6848": "Reken een bedrag aan aan de geselecteerde eenheid.",
+    "9305016a-babf-4606-af6c-e8ef9f2ba91e": "Weet je zeker dat je {total} wilt aanrekenen aan {count} eenheid/eenheden?",
+    "ab0c7981-0d5f-4c36-bd3f-07ddc2a63759": "Jouw eenheid bevindt zich in een ander werkjaar dan Fos Open Scouting.",
+    "4bff53d6-7455-45fc-aa6d-ae0bafbe0b47": "Elke eenheid moet per inschrijvingsgroep een standaard leeftijdsgroep koppelen. Op die manier kan de benaming van de groep gekoppeld worden aan de algemene benaming van de koepel.",
+    "e99c7d31-f9fe-4e0f-8947-bdc30784de5b": "* Voor de aansluiting bij Stamhoofd moet je nog een correcte standaard inschrijvingsgroep selecteren zodat de benaming die jouw eenheid gebruikt gekoppeld kan worden aan de benaming van Stamhoofd.",
     "b789017f-58d2-438b-b73a-2a4d075e3c5b": "Unieke eenheden",
     "cd0975fc-75c4-4c1e-b80a-f611f0992caa": "Alle eenheden",
     "b78d9c9e-9099-4fb6-93e1-6bf58e39165f": "De categorieën en leeftijdsgroepen van de eenheden worden gedupliceerd naar het nieuwe werkjaar.",
+    "9de0900d-9daa-48e5-ab82-496c61dfc5db": "Alle leeftijdsgroepen worden gesloten (tenzij de eenheid al eerder overschakelde naar dit werkjaar)",
     "671147bd-cf0e-42fc-b456-18ce7d75b867": "Alle eenheden worden nu overgezet op het nieuw werkjaar. Dit kan even duren, mogelijks moet je de pagina nog even herladen om alle laatste wijzigingen correct te zien.",
     "fd52fa36-16e6-4106-807c-c387bc0acc0e": "Geen eenheden beschikbaar in dit werkjaar",
-    "6e884f27-427f-4f85-914c-d5c2780253b0": "Eenheden"
+    "022aad3d-6250-4000-9336-4ae7e8e75c23": "Alle leden met deze functie, krijgen automatisch toegangsrechten tot de leeftijdsgroep van een eenheid waarvoor de functie werd toegevoegd - enkel voor één specifiek werkjaar.",
+    "f1248bd5-36f4-40fd-9467-08bda59127d6": "Lijst van alle eenheden die nog een openstaand bedrag hebben tegenover {name}",
+    "4a2a630f-3396-404f-9316-d660df9935a9": "Alle aansluitingen die (al dan niet automatisch) aan leden worden toegevoegd, worden pas toegevoegd aan het openstaande bedrag van een eenheid na een manuele actie. Daarna kan een eenheid het bedrag betalen via een online betaling in hun beheerdersportaal.",
+    "f1931dcf-219f-4ca2-935b-d5a6747ddbdb": "De aansluitingkosten worden altijd aangerekend via een organisatie/eenheid die de koepel vertegenwoordigt. De betaalinstellingen en facturatiegegevens van die eenheid worden gebruikt voor het verzamelen van alle betalingen. Op die manier kan je de beschikbare betaalmethodes en betaalaccounts configureren.",
+    "550e876b-f397-44a5-9e0a-fb5ce6df3a40": "Gebruik de boekhoudmodule van deze eenheid om een zicht te krijgen op alle betalingen.",
+    "f4c0da5a-03a8-4be2-9ae1-ea049b5b46af": "Er is nog geen verantwoordelijke eenheid ingesteld. Kies een eenheid die verantwoordelijk is voor het verzamelen van de aansluitingskosten.",
+    "4be45e47-0ee2-43cd-b719-8a60513f0965": "Dit is een standaardinstelling. Een eenheid kan deze instellingen nog aanpassen. Deze instelling dient dus vooral als standaardinstelling en om te communiceren richting eenheden.",
+    "18a41eda-92fd-46a6-acc1-fc35536b86b4": "Beperk tot bepaalde eenheden (tags)",
+    "5d1da89a-aa00-4953-aa59-53c0342c5c1a": "Kies voor welke lokale eenheden deze standaard leeftijdsgroep beschikbaar is.",
+    "8ecaf93e-e872-4556-9067-f89b3f81332e": "Een eenheid kan deze template aanpassen. Deze template wordt gebruikt als er geen lokale template is.",
+    "07d18e1b-2935-4945-9595-50e16a929b19": "Voeg zelf nog persoonsgegevens toe die voor alle eenheden beschikbaar zijn. Je kan deze vervolgens verplichten voor alle leden die inschrijven bij gelijk welke standaard-leeftijdsgroep, of deze verplichten per standaard-leeftijdsgroep (via de instellingen van elke standaard-leeftijdsgroep). Indien niet ingeschakeld kunnen eenheden deze ook nog inschakelen volgens hun wensen.",
+    "aad47217-df26-43ce-a43c-896697d5fbd4": "Voeg eigen functies toe die enkel van toepassing zijn in je eigen eenheid.",
+    "e6da382b-6acc-4a77-ab74-ece7ea002d5f": "Deze functies worden gekoppeld aan een lid samen met een eenheid, door een hoofdbeheerder van die eenheid. Een eenheid kan zelf ook nog eenheidseigenfuncties toevoegen om deze uit te breiden."
   }
   
