--- a/shared/locales/src/keeo/nl.json
+++ b/shared/locales/src/keeo/nl.json
@@ -45,6 +45,7 @@
     "8ecaf93e-e872-4556-9067-f89b3f81332e": "Een eenheid kan deze template aanpassen. Deze template wordt gebruikt als er geen lokale template is.",
     "07d18e1b-2935-4945-9595-50e16a929b19": "Voeg zelf nog persoonsgegevens toe die voor alle eenheden beschikbaar zijn. Je kan deze vervolgens verplichten voor alle leden die inschrijven bij gelijk welke standaard-leeftijdsgroep, of deze verplichten per standaard-leeftijdsgroep (via de instellingen van elke standaard-leeftijdsgroep). Indien niet ingeschakeld kunnen eenheden deze ook nog inschakelen volgens hun wensen.",
     "aad47217-df26-43ce-a43c-896697d5fbd4": "Voeg eigen functies toe die enkel van toepassing zijn in je eigen eenheid.",
-    "e6da382b-6acc-4a77-ab74-ece7ea002d5f": "Deze functies worden gekoppeld aan een lid samen met een eenheid, door een hoofdbeheerder van die eenheid. Een eenheid kan zelf ook nog eenheidseigenfuncties toevoegen om deze uit te breiden."
+    "e6da382b-6acc-4a77-ab74-ece7ea002d5f": "Deze functies worden gekoppeld aan een lid samen met een eenheid, door een hoofdbeheerder van die eenheid. Een eenheid kan zelf ook nog eenheidseigenfuncties toevoegen om deze uit te breiden.",
+    "b422c6f2-be24-4edd-aa99-a2d72d59c496": "Dit kan op meerdere niveau's worden uitgebreid: per standaard leeftijdsgroep van de koepel, op lokaal niveau van een eenheid en per leeftijdsgroep, wachtlijst of activiteit van een eenheid (of activiteit op nationaal niveau)."
   }
   
