--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -617,5 +617,13 @@
   "fcf09121-af79-4d3f-90e7-31dec01ebb98": "Standaardfuncties op lokaal niveau",
   "aad47217-df26-43ce-a43c-896697d5fbd4": "Voeg eigen functies toe die enkel van toepassing zijn in je eigen groep.",
   "e6da382b-6acc-4a77-ab74-ece7ea002d5f": "Deze functies worden gekoppeld aan een lid samen met een lokale groep, door een hoofdbeheerder van die groep. Een lokale groep kan zelf ook nog groepseigenfuncties toevoegen om deze uit te breiden.",
-  "53a2f29c-ee8c-42da-b49a-c0ce07544b99": "De wijzigingen zijn opgeslagen"
+  "53a2f29c-ee8c-42da-b49a-c0ce07544b99": "De wijzigingen zijn opgeslagen",
+  "62103514-05f5-4dc0-a5cc-c9321f21c63d": "Je kan geen aansluitingen meer toevoegen in dit werkjaar",
+  "745f5355-3398-406d-842e-5c9f7a700e91": "Je kan geen aansluitingen meer toevoegen in {period} (vergrendeld)",
+  "1f1d657d-bc73-4cae-9025-b3ec67a705e7": "Je kan geen aansluitingen meer verwijderen in dit werkjaar",
+  "2e615670-813a-414f-b06c-f76136891bf8": "Je kan geen aansluitingen meer verwijderen in {period} (vergrendeld)",
+  "31e91d3b-16e5-4608-9390-75e61d4d090d": "Je kan het huidig werkjaar hier wijzigen. Zorg dat je voor dit werkjaar alle aansluitingen hebt ingesteld. Ga daarvoor naar 'aansluitingen en verzekeringen' en voeg het werkjaar toe en stel de nieuwe prijzen en periodes correct in.",
+  "bfc8aada-8c57-4789-9059-a7df4824e67b": "Met een filtergroep kan je combinaties van 'en' en 'of' maken.",
+  "b422c6f2-be24-4edd-aa99-a2d72d59c496": "Dit kan op meerdere niveau's worden uitgebreid: per standaard leeftijdsgroep van de koepel, op lokaal niveau van een lokale groep en per leeftijdsgroep, wachtlijst of activiteit van een lokale groep (of activiteit op nationaal niveau).",
+  "b4cd468d-e3fd-47d2-b59c-cf19b1d3aee0": "Gebruik vragenlijsten niet om tijdelijke gegevens te verzamelen. Voeg daarvoor keuzemenu's toe aan je inschrijvingsgroepen of activiteiten."
 }
