Added translations for setup step deadline
fixes STA-439

--- a/shared/locales/src/digit/en.json
+++ b/shared/locales/src/digit/en.json
@@ -12,5 +12,6 @@
   "d54c9b23-2d3c-49cd-b1fc-7e821d36fd41": "Inloggen bij KSA",
   "a654551b-6dcd-48a9-a5c5-4609fdcba5f3": "Ravot is in orde",
   "8e77d1c1-87dc-4fdb-ad6e-13145bc96f78": "Breng Ravot in orde",
-  "ab0c7981-0d5f-4c36-bd3f-07ddc2a63759": "Jouw groep bevindt zich in een ander werkjaar dan KSA Nationaal."
+  "ab0c7981-0d5f-4c36-bd3f-07ddc2a63759": "Jouw groep bevindt zich in een ander werkjaar dan KSA Nationaal.",
+  "cd60d49f-9fc8-4fb7-b574-1231874c1d43": "Overloop alle stappen en bevestig dat je alles hebt nagekeken bij elke stap. Zorg dat alles ten laatste tegen 15 oktober is nagekeken."
 }
