--- a/shared/locales/src/en.json
+++ b/shared/locales/src/en.json
@@ -638,5 +638,7 @@
   "b422c6f2-be24-4edd-aa99-a2d72d59c496": "Dit kan op meerdere niveau's worden uitgebreid: per standaard leeftijdsgroep van de koepel, op lokaal niveau van een #lokale-groep en per leeftijdsgroep, wachtlijst of activiteit van een #lokale-groep (of activiteit op nationaal niveau).",
   "b4cd468d-e3fd-47d2-b59c-cf19b1d3aee0": "Gebruik vragenlijsten niet om tijdelijke gegevens te verzamelen. Voeg daarvoor keuzemenu's toe aan je inschrijvingsgroepen of activiteiten.",
   "9c916015-e69c-44b3-a568-d0af15854787": "Alle groepen worden overgezet op dit nieuwe werkjaar. Hoofdbeheerders kunnen het vorige werkjaar nog bekijken.",
-  "d5e39906-8c0b-4006-bab5-96827f8daa53": "Er zijn geen leden die kunnen inschrijven."
+  "d5e39906-8c0b-4006-bab5-96827f8daa53": "Er zijn geen leden die kunnen inschrijven.",
+  "cd60d49f-9fc8-4fb7-b574-1231874c1d43": "Overloop alle stappen en bevestig dat je alles hebt nagekeken bij elke stap. Zorg dat alles ten laatste tegen 15 oktober is nagekeken.",
+  "b1c11fd1-81dc-46f2-8cfb-0ba02d260f19": "Deze aansluiting is vergrendeld. Hierdoor kan de prijs niet aangepast worden en kan deze niet verwijderd worden."
 }
