--- a/shared/locales/src/keeo/nl.json
+++ b/shared/locales/src/keeo/nl.json
@@ -8,6 +8,7 @@
       "Werkjaar": "Scoutsjaar",
       "Werkjaren": "Scoutsjaren",
       "werkjaren": "scoutsjaren",
+      "#platform": "Keeo",
 
       "#groepseigen": "eenheidseigen",
       "#groepen": "eenheden",
