Added email notifications to event notifications

--- a/shared/locales/src/en.json
+++ b/shared/locales/src/en.json
@@ -643,5 +643,48 @@
   "cd60d49f-9fc8-4fb7-b574-1231874c1d43": "Overloop alle stappen en bevestig dat je alles hebt nagekeken bij elke stap. Zorg dat alles ten laatste tegen 15 oktober is nagekeken.",
   "b1c11fd1-81dc-46f2-8cfb-0ba02d260f19": "Deze aansluiting is vergrendeld. Hierdoor kan de prijs niet aangepast worden en kan deze niet verwijderd worden.",
   "ced29068-facb-4692-9fd7-d9ac74e35359": "Kijk na of alle instellingen van de groepen correct zijn. Als alles goed staat ingesteld kan je ervoor zorgen dat alle leden via #platform kunnen inschrijven én betalen. Let dus goed op welke tarieven je instelt, en welke leeftijdsrestricties je gebruikt. Als je klaar bent kan je een leeftijdsgroep openen zodat leden via #platform kunnen inschrijven.",
-  "03447d19-17e4-41b0-aa2c-cec5c9567354": "Alle groepen zijn gesloten."
+  "03447d19-17e4-41b0-aa2c-cec5c9567354": "Alle groepen zijn gesloten.",
+  "97616151-90c3-4644-8854-e228c4f355f5": "Dit werkjaar is vergrendeld, je kan geen meldingen meer aanmaken voor deze periode",
+  "a0c39573-d44e-4ac0-aaeb-f9062fa1b3ce": "De melding werd niet gevonden",
+  "c5dcd14a-868e-4eba-a5dd-409932e44ce9": "Je kan deze melding niet meer bewerken omdat deze al is ingediend",
+  "289e2f29-cdc9-4f44-92de-d7188d6563d7": "Je kan deze melding niet meer bewerken omdat deze al is goedgekeurd",
+  "b47ce42b-ac72-451e-b871-deb07d93b5fa": "Je hebt geen toegang om deze melding te bewerken",
+  "16a3b696-f8da-4b2b-94b7-49c85ee1c38c": "Dit werkjaar werd niet gevonden",
+  "43cc054d-cf2f-432b-9259-e7764dc929e3": "Dit werkjaar is vergrendeld, je kan geen meldingen meer aanpassen in deze periode",
+  "4d8be2b1-559a-4c16-a76f-67a8ba85de7f": "Dit type melding bestaat niet",
+  "daa3726b-9b63-4f36-b41b-8f25d1b89cf4": "De startdatum van de melding moet gelijk zijn aan de startdatum van het evenement",
+  "d326210d-ecc0-421c-b38b-d12ae0209420": "De einddatum van de melding moet gelijk zijn aan de einddatum van het evenement",
+  "f544b972-416c-471d-8836-d7f3b16f947d": "Dit werkjaar is vergrendeld, je kan geen inschrijvingsgroepen meer toevoegen",
+  "f86bcf9f-ffd2-429a-9b04-778e61c8288c": "Alle meldingen",
+  "87a2582f-6de5-4b59-9395-7c49f8540659": "Vereniging",
+  "5dd0bc69-83ba-4ee7-99e9-141d0cdf5a84": "Groepsnummer",
+  "35c08279-a7ce-4536-a201-985bb882a6cf": "Contactpersonen van groepen",
+  "8b9ef669-554d-4ee2-b3bd-2ea12f85fa26": "Bepaal wie een e-mail krijgt als notificatie van een kampmelding op niveau van een vereniging, naast de indiener van de melding.",
+  "95e5b391-4399-40ae-8e58-aed3b822e65a": "Contactpersonen van koepel (goedkeurders)",
+  "f4b0aed8-5223-471c-81e3-1b580d359f66": "Op niveau van de koepel moet de melding worden nagekeken. Standaard zal iedere koepelbeheerder die toegang heeft tot de ingediende melding een e-mail krijgen, hiervoor moet je een expliciet toegangsrecht toekennen aan die beheerders (behalve voor beheerders met volledige toegang). Afmelden voor deze e-mails is momenteel niet mogelijk, maar zal op termijn worden toegevoegd op accountniveau.",
+  "8bc53634-08a5-4404-9455-421955e83ce4": "Je hebt geen toegangsrechten om de facturatiegegevens van deze vereniging te bewerken.",
+  "d26eacf8-26b6-4fa6-8a58-1f8f256bd5fc": "Knop om de kampmelding na te kijken",
+  "b782247f-6a73-4de0-8563-03cf9187b888": "Kampmelding nakijken",
+  "21fb9a88-0fcd-4d55-8ae5-a2ef4af5637c": "Met deze knop kunnen ontvangers de kampmelding openen.",
+  "5685519b-26b5-43cf-b1f3-73fdc2e642cd": "Naam indiener",
+  "cb76c693-29ff-4d41-9c45-56106a798818": "Naam activiteit",
+  "44f90dca-5bb1-4bad-bf03-fd425cdb6a03": "Periode",
+  "9a9a7777-44ca-494b-9d15-c0192bc41a7f": "Kampmelding ingediend: kopie",
+  "ff2beaea-cb8f-4de8-ba1c-039b7ba20bc0": "Kampmelding ingediend",
+  "c936748e-b6f9-4aa9-9822-77bd727501eb": "Kampmelding goedgekeurd",
+  "01266433-c6b9-4c4b-b09f-b212cc0ce5a8": "Kampmelding afgekeurd",
+  "a4658017-52e9-4732-8570-2c60e5d6a5cd": "Kampmeldingen",
+  "fdf6dd9d-25f9-41bc-869b-beb2906aa77f": "E-mail die wordt verzonden naar de indiener (en de ingestelde contactpersonen van de vereniging) als kopie van een kampmelding",
+  "bd2321f7-caea-423e-a5e9-823023e74ec9": "E-mail die wordt verzonden naar de reviewer van een kampmelding als die wordt ingediend",
+  "1bb58aa1-e36e-4384-8c54-be3b71d77a3b": "E-mail die wordt verzonden naar de indiener (en de ingestelde contactpersonen van de vereniging) als een kampmelding wordt goedgekeurd",
+  "0b6949f6-80b7-4d48-9e1e-16bfb826014a": "E-mail die wordt verzonden naar de indiener (en de ingestelde contactpersonen van de vereniging) als een kampmelding wordt afgekeurd",
+  "aeace79f-c772-4944-8d1d-f92eb519267f": "Demovereniging",
+  "6f77926b-801a-477d-8254-78166ca8e6be": "Demovereniging op Stamhoofd",
+  "aaaaf4eb-6714-42b8-bd94-aa167246cac6": "Zomerkamp",
+  "b66ae14a-e02d-4c80-bec2-d7440da7643f": "15 juli 2025 - 22 juli 2025",
+  "bd54c45e-d3df-444e-b5d9-9722a6e08999": "Naam leden",
+  "e07bc7a1-92c0-48fc-91f3-46e12573ee03": "Naam vereniging",
+  "e60df757-6546-41c2-b3d3-599df08f34b6": "Demovereniging",
+  "16ba3d97-5943-451d-92b5-0bf21555f7ae": "Demovereniging",
+  "a17cab0f-62f8-4403-8436-c649f578196f": "Demowinkel"
 }
