--- a/shared/locales/src/en.json
+++ b/shared/locales/src/en.json
@@ -686,5 +686,24 @@
   "e07bc7a1-92c0-48fc-91f3-46e12573ee03": "Naam vereniging",
   "e60df757-6546-41c2-b3d3-599df08f34b6": "Demovereniging",
   "16ba3d97-5943-451d-92b5-0bf21555f7ae": "Demovereniging",
-  "a17cab0f-62f8-4403-8436-c649f578196f": "Demowinkel"
+  "a17cab0f-62f8-4403-8436-c649f578196f": "Demowinkel",
+  "4c3149b3-e02a-4071-bf21-941711e0238d": "Geen feedback gegeven",
+  "a5c30846-b8ae-410d-8fcd-bfc3f127623d": "Deze filter wordt niet ondersteund, probeer een andere filter of neem contact op",
+  "16c87ee7-27b1-4b87-93e3-221d35038e6a": "Ingediend op",
+  "faf32311-9a1c-4659-8156-e1714071ca68": "Nooit",
+  "86983e38-4283-4f0a-bd1d-f48f050d3681": "Startdatum",
+  "c15040b1-3202-45a8-8d30-030a4e4c5f9c": "Einddatum",
+  "8e2f97c0-0687-4b50-91f1-2b0e266de755": "Naam activiteit",
+  "fde0cfa6-c279-4eef-ab75-8f62fd4028a8": "Status",
+  "46e61090-1188-4085-8995-69aef85af678": "Ingediend door {name} op {date}",
+  "47754708-6f27-4afd-b9fe-600a209cb980": "Groepsnaam",
+  "b8edf1c5-ebc8-4aae-83c1-249c08db529d": "Type activiteit",
+  "cef37396-3c75-4a85-b14e-d1f7cfb9e546": "Hiërarchie",
+  "3771b48b-2385-47ac-b948-9f7ff6d1988e": "klad",
+  "62bee5f8-3532-4eee-8281-ff6df193d190": "ingediend",
+  "372e7507-9f34-4360-bb44-25e324ff36c6": "goedgekeurd",
+  "1ff072f8-6913-4b85-a1e4-4e4ecc1a1bf4": "afgekeurd",
+  "f90728f1-0e73-4027-9408-adfc38c9a4f0": "Tekst met feedback",
+  "21c3edb6-8c2d-43c2-8c51-245d75006774": "Dit zijn de opmerkingen die ingevuld werden bij het afkeuren van een kampmelding",
+  "ac49cf9f-c0de-479c-829d-99e7a31874d2": "Een van de telefoonnummers die je had opgegeven lijkt niet geldig te zijn, kan je deze nog aanvullen en de kampmelding daarna opnieuw indienen?"
 }
