Updated Keeo replacements

--- a/shared/locales/src/keeo/en.json
+++ b/shared/locales/src/keeo/en.json
@@ -1,24 +1,30 @@
 {
     "replacements": {
-      "Verenigingen": "Eenheden",
-      "verenigingen": "eenheden",
-      "Vereniging": "Eenheid",
-      "vereniging": "eenheid",
-      "werkjaar": "scoutsjaar",
-      "Werkjaar": "Scoutsjaar",
-      "Werkjaren": "Scoutsjaren",
-      "werkjaren": "scoutsjaren",
-      "#platform": "Keeo",
-
-      "#groepseigen": "eenheidseigen",
-      "#groepen": "eenheden",
-      "#Groepen": "Eenheden",
-      "#groep": "eenheid",
-      "#Groep": "Eenheid",
-      "#lokale-groepen": "eenheden",
-      "#Lokale-groepen": "Eenheden",
-      "#lokale-groep": "eenheid",
-      "#Lokale-groep": "Eenheid"
+        "Demovereniging": "FOS De Goudvis",
+        "demovereniging": "FOS De Goudvis",
+        "Verenigingen": "Eenheden",
+        "verenigingen": "eenheden",
+        "Vereniging": "Eenheid",
+        "vereniging": "eenheid",
+        "werkjaar": "scoutsjaar",
+        "Werkjaar": "Scoutsjaar",
+        "Werkjaren": "Scoutsjaren",
+        "werkjaren": "scoutsjaren",
+        "Groepsnummer": "Eenheidsnummer",
+        "groepsnummer": "eenheidsnummer",
+        "Groepsnaam": "Eenheidsnaam",
+        "groepsnaam": "eenheidsnaam",
+  
+        "#platform": "Keeo",
+        "#groepseigen": "eenheidseigen",
+        "#groepen": "eenheden",
+        "#Groepen": "Eenheden",
+        "#groep": "eenheid",
+        "#Groep": "Eenheid",
+        "#lokale-groepen": "eenheden",
+        "#Lokale-groepen": "Eenheden",
+        "#lokale-groep": "eenheid",
+        "#Lokale-groep": "Eenheid"
     },
     "81c91169-db1e-4819-8716-5382ffbaa43b": "Het eenheidsnummer is een unieke code voor deze eenheid. Deze wordt in de URL-balk van de browser gebruikt.",
     "2cc5355d-3c19-4a6e-a2c7-1d93e423a8d2": "Eenheidsnummer",
