Updated app assets for Keeo

--- a/frontend/app/mobile/android/app/src/main/res/values/strings.xml
+++ b/frontend/app/mobile/android/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version='1.0' encoding='utf-8' ?>
 <resources>
-    <string name="app_name">Ravot</string>
+    <string name="app_name">Keeo</string>
     <string name="title_activity_main">Ravot</string>
     <string name="package_name">be.ksa.ravot</string>
     <string name="custom_url_scheme">be.ksa.ravot</string>
